hphp/hack/test/typecheck/constraints/bad_contra_constraint.php.like_types.exp
File "bad_contra_constraint.php", line 22, characters 21-25:
Invalid argument (Typing[4110])
File "bad_contra_constraint.php", line 7, characters 30-37:
Expected ~Base<[unresolved]> because it is an unenforceable type
File "bad_contra_constraint.php", line 13, characters 17-23:
But got Base<dynamic>
